--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -1,68 +1,74 @@
-<div class="menu">
-    <div>Date: <input type="date"/></div>
-    <div>Start:
-        <select>
-            <option value="800">8:00 am</option>
-            <option value="830">8:30 am</option>
-            <option value="">9:00 am</option>
-            <option value="">9:30 am</option>
-            <option value="">10:00 am</option>
-            <option value="">10:30 am</option>
-            <option value="">11:00 am</option>
-            <option value="">11:30 am</option>
-            <option value="">12:00 pm</option>
-            <option value="">12:30 pm</option>
-            <option value="">1:00 pm</option>
-            <option value="">1:30 pm</option>
-            <option value="">2:00 pm</option>
-            <option value="">2:30 pm</option>
-            <option value="">3:00 pm</option>
-            <option value="">3:30 pm</option>
-            <option value="">4:00 pm</option>
-            <option value="">4:30 pm</option>
-            <option value="">5:00 pm</option>
-            <option value="">5:30 pm</option>
-            <option value="">6:00 pm</option>
-            <option value="">6:30 pm</option>
-            <option value="">7:00 pm</option>
-            <option value="">7:30 pm</option>
-            <option value="">8:00 pm</option>
-            <option value="">5:30 pm</option>
-        </select>
+<form>
+    <div class="menu">
+        <div>
+            <input type="date" ng-model="date"/>
+        </div>
+        <div>From:
+            <select ng-model="startTime">
+                <option value="8:00 am">8:00 am</option>
+                <option value="8:30 am">8:30 am</option>
+                <option value="9:00 am">9:00 am</option>
+                <option value="9:30 am">9:30 am</option>
+                <option value="10:00 am">10:00 am</option>
+                <option value="10:30 am">10:30 am</option>
+                <option value="11:00 am">11:00 am</option>
+                <option value="11:30 am">11:30 am</option>
+                <option value="12:00 pm">12:00 pm</option>
+                <option value="12:30 pm">12:30 pm</option>
+                <option value="1:00 pm">1:00 pm</option>
+                <option value="1:30 pm">1:30 pm</option>
+                <option value="2:00 pm">2:00 pm</option>
+                <option value="2:30 pm">2:30 pm</option>
+                <option value="3:00 pm">3:00 pm</option>
+                <option value="3:30 pm">3:30 pm</option>
+                <option value="4:00 pm">4:00 pm</option>
+                <option value="4:30 pm">4:30 pm</option>
+                <option value="5:00 pm">5:00 pm</option>
+                <option value="5:30 pm">5:30 pm</option>
+                <option value="6:00 pm">6:00 pm</option>
+                <option value="6:30 pm">6:30 pm</option>
+                <option value="7:00 pm">7:00 pm</option>
+                <option value="7:30 pm">7:30 pm</option>
+                <option value="8:00 pm">8:00 pm</option>
+            </select>
+        </div>
+        <div>To:
+            <select ng-model="endTime">
+                <option value="8:00 am">8:00 am</option>
+                <option value="8:30 am">8:30 am</option>
+                <option value="9:00 am">9:00 am</option>
+                <option value="9:30 am">9:30 am</option>
+                <option value="10:00 am">10:00 am</option>
+                <option value="10:30 am">10:30 am</option>
+                <option value="11:00 am">11:00 am</option>
+                <option value="11:30 am">11:30 am</option>
+                <option value="12:00 pm">12:00 pm</option>
+                <option value="12:30 pm">12:30 pm</option>
+                <option value="1:00 pm">1:00 pm</option>
+                <option value="1:30 pm">1:30 pm</option>
+                <option value="2:00 pm">2:00 pm</option>
+                <option value="2:30 pm">2:30 pm</option>
+                <option value="3:00 pm">3:00 pm</option>
+                <option value="3:30 pm">3:30 pm</option>
+                <option value="4:00 pm">4:00 pm</option>
+                <option value="4:30 pm">4:30 pm</option>
+                <option value="5:00 pm">5:00 pm</option>
+                <option value="5:30 pm">5:30 pm</option>
+                <option value="6:00 pm">6:00 pm</option>
+                <option value="6:30 pm">6:30 pm</option>
+                <option value="7:00 pm">7:00 pm</option>
+                <option value="7:30 pm">7:30 pm</option>
+                <option value="8:00 pm">8:00 pm</option>
+            </select>
+        </div>
     </div>
-    <div>End:
-        <select>
-            <option value="800">8:00 am</option>
-            <option value="830">8:30 am</option>
-            <option value="">9:00 am</option>
-            <option value="">9:30 am</option>
-            <option value="">10:00 am</option>
-            <option value="">10:30 am</option>
-            <option value="">11:00 am</option>
-            <option value="">11:30 am</option>
-            <option value="">12:00 pm</option>
-            <option value="">12:30 pm</option>
-            <option value="">1:00 pm</option>
-            <option value="">1:30 pm</option>
-            <option value="">2:00 pm</option>
-            <option value="">2:30 pm</option>
-            <option value="">3:00 pm</option>
-            <option value="">3:30 pm</option>
-            <option value="">4:00 pm</option>
-            <option value="">4:30 pm</option>
-            <option value="">5:00 pm</option>
-            <option value="">5:30 pm</option>
-            <option value="">6:00 pm</option>
-            <option value="">6:30 pm</option>
-            <option value="">7:00 pm</option>
-            <option value="">7:30 pm</option>
-            <option value="">8:00 pm</option>
-            <option value="">5:30 pm</option>
-        </select>
+    <div class="filter">
+        <input type="checkbox" ng-model="hasVideo"/> Video
+        <input type="checkbox" ng-model="hasWhiteBoard"/> White Board
+        <input class="min capacity" ng-model="minCapacity" type="number" min="1" max="20" value="2"/> to
+        <input class="max capacity" ng-model="maxCapacity" type="number" min="1" max="20" value="3"/> people
     </div>
-</div>
-<div class="filter">
-    <input type="checkbox"/> Video
-    <input type="checkbox"/> White Board
-    <input class="capacity" type="number" value="1"/> to <input type="number" value="2"/> people
-</div>
+    <div class="cta">
+        <button ng-click="findRooms()">Find My Rooms!</button>
+    </div>
+</form>
