--- a/app/views/sj8.html
+++ b/app/views/sj8.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" ng-controller="sanJoseCtrl">
+<div class="jumbotron">
     <menu></menu>
     <!--<img src="images/SanJose8.jpg" alt="San Jose 8th Floor" width="1000">-->
 
