avail rooms section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -189,3 +189,10 @@ body {
 {
   height: 50px;
 }
+.section
+{
+    color: #35485e;
+    font-family: 'Helvetica Neue';
+    font-size: 24px;
+    font-weight: bold;
+}
