--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -1,5 +1,5 @@
 <form>
-    <h3>When</h3>
+    <h1 class="section">When</h1>
     <section id="when">
         <div class="datePicker control">
             <p class="input-group ">
@@ -106,13 +106,13 @@
                 </li>
             </ul>
         </div>
-        <div class="go control" style="float: right; margin-right: 200px; margin-top:30px;">
+        <div class="go control" style="float: right; margin-right: 200px; margin-top:-30px;">
             <button type="button" class="btn btn-info btn-lg" ng-click="findRooms()" style="font-size: xx-large">
                 Search
             </button>
         </div>
     </section>
-    <h3>Gotta Have</h3>
+    <h1 class="section">Gotta Have</h1>
     <section id="gottaHave">
         <div class="control">
             <div class="btn-toolbar" role="toolbar">
