removed image header and used html

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -161,6 +161,13 @@ body {
 /* Redesign */
 .banner
 {
+//  text-align: center;
+  border-radius: 10px;
+  margin: 10px auto;
+  background-color: #34485e;
+  font-size: 47px ;
+  font-family: 'Futura Condensed';
+  color: #FFFFFF;
   text-align: center;
 }
 
