--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -133,7 +133,7 @@
             </div>
         </div>
         <div class="input-group control">
-            <div class="input-group">
+            <div class="input-group whiteboard">
                 <span class="input-group-addon">
                     <input type="checkbox" aria-label="..." ng-model="hasWhiteBoard">
                 </span>
@@ -141,7 +141,7 @@
             </div>
         </div>
         <div class="input-group control">
-            <div class="input-group">
+            <div class="input-group video">
                 <span class="input-group-addon">
                     <input type="checkbox" aria-label="..." ng-model="hasVideo">
                 </span>
