--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -13,12 +13,12 @@
             </p>
         </div>
         <div class="dropdown timePicker control">
-            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+            <button class="btn btn-success dropdown-toggle" type="button" id="startTimeButton" data-toggle="dropdown"
                     aria-expanded="false">
-                Start Time
+                <span id="startTimeText">Start Time</span>
                 <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+            <ul class="dropdown-menu" role="menu" aria-labelledby="startTimeButton">
                 <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="setStartTime('8:00 am')">8:00 am</a>
                 </li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="setStartTime('8:30 am')">8:30 am</a>
@@ -60,12 +60,12 @@
             </ul>
         </div>
         <div class="dropdown timePicker control">
-            <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
+            <button class="btn btn-danger dropdown-toggle" type="button" id="endTimeButton" data-toggle="dropdown"
                     aria-expanded="false">
-                End Time
+                <span id="endTimeText">End Time</span>  
                 <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+            <ul class="dropdown-menu" role="menu" aria-labelledby="endTimeButton">
                 <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="setEndTime('8:00 am')">8:00 am</a>
                 </li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="setEndTime('8:30 am')">8:30 am</a>
